# win-ipc

./: Cargo.toml  LICENSE  README.md
examples/: demo.rs
src/: lib.rs  node.rs  receiver.rs  sender.rs
tests/: roundtrip.rs
