[package]
name = "win-ipc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Restart-safe shared-memory IPC channels: iceoryx2 transport, wincode serialization"
license = "MIT"
repository = "https://github.com/Astralane/win-ipc"

[dependencies]
iceoryx2 = "0.9.3"
wincode = { version = "0.5.5", features = ["derive"] }
eyre = "0.6"
metrics = "0.24"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"
affinity = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
